# server

./: 404.html  Cargo.toml  index.html  index2.html
src/: main.rs  non_blocking_server.rs  parse_req.rs  practice.rs  server.rs
src/http/: method.rs  mod.rs  request.rs
